deploy: be7e5b39a1fa01a16679bc7f2455944378f1f72a

--- a/assignment/09-hw3/index.html
+++ b/assignment/09-hw3/index.html
@@ -32,7 +32,7 @@
   
   <meta name="description" content="Due Date November 5, 2021 by midnight Pacific time.
 The learning objectives are to conduct data scraping and perform text mining.
- APIs  Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine children.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?">
+ APIs  Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/09-hw3/">
@@ -240,7 +240,7 @@ The learning objectives are to conduct data scraping and perform text mining.
   <meta property="og:title" content="Assignment 03 - Web Scraping and Text Mining | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="Due Date November 5, 2021 by midnight Pacific time.
 The learning objectives are to conduct data scraping and perform text mining.
- APIs  Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine children.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+ APIs  Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -528,7 +528,7 @@ The learning objectives are to conduct data scraping and perform text mining.
 <div id="apis" class="section level2">
 <h2>APIs</h2>
 <ul>
-<li><p>Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine children.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?</p></li>
+<li><p>Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?</p></li>
 <li><p>Using the list of pubmed ids you retrieved, download each papers’ details using the query parameter rettype = abstract. If you get more than 250 ids, just keep the first 250.</p></li>
 <li><p>As we did in lab 7. Create a dataset containing the following:</p>
 <ol style="list-style-type: decimal">
