--- a/assignment/index.html
+++ b/assignment/index.html
@@ -567,7 +567,7 @@ For this assignment, we will be analyzing data from USC’s Children’s Health 
         
           Due Date November 5, 2021 by midnight Pacific time.
 The learning objectives are to conduct data scraping and perform text mining.
- APIs  Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine children.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?
+ APIs  Using the NCBI API, look for papers that show up under the term “sars-cov-2 trial vaccine.” Look for the data in the pubmed database, and then retrieve the details of the paper as shown in lab 7. How many papers were you able to find?
         
       </div>
     </div>
