--- a/assignment/10-lab/index.html
+++ b/assignment/10-lab/index.html
@@ -30,8 +30,8 @@
   
     
   
-  <meta name="description" content="Setup DELETE THIS CHUNK
-knitr::opts_chunk$set(eval = FALSE) library(RSQLite) library(DBI) # Initialize a temporary in memory database con &lt;- dbConnect(SQLite(), &quot;:memory:&quot;) # install.packages(c(&quot;RSQLite&quot;, &quot;DBI&quot;)) library(RSQLite) library(DBI) # Initialize a temporary in memory database con &lt;- dbConnect(SQLite(), &quot;:memory:&quot;) # Download tables actor &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/actor.csv&quot;) rental &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/rental.csv&quot;) customer &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/customer.csv&quot;) payment &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/payment_p2007_01.csv&quot;) # Copy data.frames to database dbWriteTable(con, &quot;actor&quot;, actor) dbWriteTable(con, &quot;rental&quot;, rental) dbWriteTable(con, &quot;customer&quot;, customer) dbWriteTable(con, &quot;payment&quot;, payment) dbListTables(con) TIP: Use can use the following QUERY to see the structure of a table">
+  <meta name="description" content="Setup # install.packages(c(&quot;RSQLite&quot;, &quot;DBI&quot;)) library(RSQLite) library(DBI) # Initialize a temporary in memory database con &lt;- dbConnect(SQLite(), &quot;:memory:&quot;) # Download tables actor &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/actor.csv&quot;) rental &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/rental.csv&quot;) customer &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/customer.csv&quot;) payment &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/payment_p2007_01.csv&quot;) # Copy data.frames to database dbWriteTable(con, &quot;actor&quot;, actor) dbWriteTable(con, &quot;rental&quot;, rental) dbWriteTable(con, &quot;customer&quot;, customer) dbWriteTable(con, &quot;payment&quot;, payment) dbListTables(con) TIP: Use can use the following QUERY to see the structure of a table
+PRAGMA table_info(actor) SQL references:">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/10-lab/">
@@ -237,8 +237,8 @@ knitr::opts_chunk$set(eval = FALSE) library(RSQLite) library(DBI) # Initialize a
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/10-lab/">
   <meta property="og:title" content="Lab 10 - SQL | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Setup DELETE THIS CHUNK
-knitr::opts_chunk$set(eval = FALSE) library(RSQLite) library(DBI) # Initialize a temporary in memory database con &lt;- dbConnect(SQLite(), &quot;:memory:&quot;) # install.packages(c(&quot;RSQLite&quot;, &quot;DBI&quot;)) library(RSQLite) library(DBI) # Initialize a temporary in memory database con &lt;- dbConnect(SQLite(), &quot;:memory:&quot;) # Download tables actor &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/actor.csv&quot;) rental &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/rental.csv&quot;) customer &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/customer.csv&quot;) payment &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/payment_p2007_01.csv&quot;) # Copy data.frames to database dbWriteTable(con, &quot;actor&quot;, actor) dbWriteTable(con, &quot;rental&quot;, rental) dbWriteTable(con, &quot;customer&quot;, customer) dbWriteTable(con, &quot;payment&quot;, payment) dbListTables(con) TIP: Use can use the following QUERY to see the structure of a table"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  <meta property="og:description" content="Setup # install.packages(c(&quot;RSQLite&quot;, &quot;DBI&quot;)) library(RSQLite) library(DBI) # Initialize a temporary in memory database con &lt;- dbConnect(SQLite(), &quot;:memory:&quot;) # Download tables actor &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/actor.csv&quot;) rental &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/rental.csv&quot;) customer &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/customer.csv&quot;) payment &lt;- read.csv(&quot;https://raw.githubusercontent.com/ivanceras/sakila/master/csv-sakila-db/payment_p2007_01.csv&quot;) # Copy data.frames to database dbWriteTable(con, &quot;actor&quot;, actor) dbWriteTable(con, &quot;rental&quot;, rental) dbWriteTable(con, &quot;customer&quot;, customer) dbWriteTable(con, &quot;payment&quot;, payment) dbListTables(con) TIP: Use can use the following QUERY to see the structure of a table
+PRAGMA table_info(actor) SQL references:"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -518,13 +518,6 @@ knitr::opts_chunk$set(eval = FALSE) library(RSQLite) library(DBI) # Initialize a
 
 <div id="setup" class="section level1">
 <h1>Setup</h1>
-<p>DELETE THIS CHUNK</p>
-<pre class="r"><code>knitr::opts_chunk$set(eval = FALSE)
-library(RSQLite)
-library(DBI)
-
-# Initialize a temporary in memory database
-con &lt;- dbConnect(SQLite(), &quot;:memory:&quot;)</code></pre>
 <pre class="r"><code># install.packages(c(&quot;RSQLite&quot;, &quot;DBI&quot;))
 
 library(RSQLite)
