deploy: 71fc6ed4954dfffb2a65f55f3197c1128f4cfa92

--- a/reading/12-reading/index.html
+++ b/reading/12-reading/index.html
@@ -34,7 +34,7 @@
  R Markdown: The Definitive Guide, Yihui Xie, J. J. Allaire, Garrett Grolemund
  Chapter 10.5: Websites in rmarkdown’s site generator
    Optional reading  For a helpful tutorial on creating a website using rmarkdown, see: Creating websites in R, Emily C. Zabor
- For more advanced website creation using blogdown and the website generators Hugo and Jeckyll see">
+ For more advanced static website creation using blogdown and the website generators Hugo and Jeckyll see">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/reading/12-reading/">
@@ -253,7 +253,7 @@
  R Markdown: The Definitive Guide, Yihui Xie, J. J. Allaire, Garrett Grolemund
  Chapter 10.5: Websites in rmarkdown’s site generator
    Optional reading  For a helpful tutorial on creating a website using rmarkdown, see: Creating websites in R, Emily C. Zabor
- For more advanced website creation using blogdown and the website generators Hugo and Jeckyll see"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+ For more advanced static website creation using blogdown and the website generators Hugo and Jeckyll see"><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -547,9 +547,9 @@
 <h1>Optional reading</h1>
 <ul>
 <li><p>For a helpful tutorial on creating a website using rmarkdown, see: <a href="https://www.emilyzabor.com/tutorials/rmarkdown_websites_tutorial.html">Creating websites in R</a>, Emily C. Zabor</p></li>
-<li><p>For more advanced website creation using <strong>blogdown</strong> and the website generators <strong>Hugo</strong> and <strong>Jeckyll</strong> see</p></li>
+<li><p>For more advanced static website creation using <strong>blogdown</strong> and the website generators <strong>Hugo</strong> and <strong>Jeckyll</strong> see</p></li>
 <li><p><a href="https://bookdown.org/yihui/blogdown/">Creating websites with R Markdown</a>, by Yihui Xie, Amber Thomas, Alison Presmanes Hill. <a href="https://bookdown.org/yihui/blogdown/website-basics.html#website-basics">Appendix B</a> presents basic information about websites, such as HTML, CSS, and JavaScript.</p></li>
-<li><p><a href="https://gohugo.io/">Hugo</a></p></li>
+<li><p><a href="https://gohugo.io/">Hugo</a> – can explore themes and operate with them using <code>blogdown</code>.</p></li>
 </ul>
 </div>
 
