lab 11 3nd update

--- a/website/content/assignment/11-lab.html
+++ b/website/content/assignment/11-lab.html
@@ -11,6 +11,16 @@ always_allow_html: true
 <script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
+<p>Grab lab file using command line:</p>
+<pre class="sh"><code># Step 1
+cd ~/Documents
+mkdir lab11
+cd lab11
+
+# Step 2
+wget https://raw.githubusercontent.com/USCbiostats/PM566/master/website/content/assignment/11-lab.Rmd
+</code></pre>
+<p><strong>And remember to set <code>eval=TRUE</code></strong></p>
 <div id="learning-goals" class="section level1">
 <h1>Learning Goals</h1>
 <ul>
