deploy: 21fe339231b40902a159ebba1923f79022ca8934

--- a/assignment/11-lab/index.html
+++ b/assignment/11-lab/index.html
@@ -30,7 +30,9 @@
   
     
   
-  <meta name="description" content="Learning Goals  Read in and process the COVID dataset from the New York Times GitHub repository Create interactive graphs of different types using plot_ly() and ggplotly() functions Customize the hoverinfo and other plot features Create a Choropleth map using plot_geo()   Lab Description We will work with COVID data downloaded from the New York Times. The dataset consists of COVID-19 cases and deaths in each US state during the course of the COVID epidemic.">
+  <meta name="description" content="Grab lab file using command line:
+# Step 1 cd ~/Documents mkdir lab11 cd lab11 # Step 2 wget https://raw.githubusercontent.com/USCbiostats/PM566/master/website/content/assignment/11-lab.Rmd  And remember to set eval=TRUE
+Learning Goals  Read in and process the COVID dataset from the New York Times GitHub repository Create interactive graphs of different types using plot_ly() and ggplotly() functions Customize the hoverinfo and other plot features Create a Choropleth map using plot_geo()   Lab Description We will work with COVID data downloaded from the New York Times.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://uscbiostats.github.io/PM566/assignment/11-lab/">
@@ -245,7 +247,9 @@
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/11-lab/">
   <meta property="og:title" content="Lab 11 - Interactive Visualization | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Learning Goals  Read in and process the COVID dataset from the New York Times GitHub repository Create interactive graphs of different types using plot_ly() and ggplotly() functions Customize the hoverinfo and other plot features Create a Choropleth map using plot_geo()   Lab Description We will work with COVID data downloaded from the New York Times. The dataset consists of COVID-19 cases and deaths in each US state during the course of the COVID epidemic."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
+  <meta property="og:description" content="Grab lab file using command line:
+# Step 1 cd ~/Documents mkdir lab11 cd lab11 # Step 2 wget https://raw.githubusercontent.com/USCbiostats/PM566/master/website/content/assignment/11-lab.Rmd  And remember to set eval=TRUE
+Learning Goals  Read in and process the COVID dataset from the New York Times GitHub repository Create interactive graphs of different types using plot_ly() and ggplotly() functions Customize the hoverinfo and other plot features Create a Choropleth map using plot_geo()   Lab Description We will work with COVID data downloaded from the New York Times."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
   
     
@@ -525,6 +529,16 @@
 <script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
+<p>Grab lab file using command line:</p>
+<pre class="sh"><code># Step 1
+cd ~/Documents
+mkdir lab11
+cd lab11
+
+# Step 2
+wget https://raw.githubusercontent.com/USCbiostats/PM566/master/website/content/assignment/11-lab.Rmd
+</code></pre>
+<p><strong>And remember to set <code>eval=TRUE</code></strong></p>
 <div id="learning-goals" class="section level1">
 <h1>Learning Goals</h1>
 <ul>
