--- a/website/static/slides/12-interactive-viz2/slides.html
+++ b/website/static/slides/12-interactive-viz2/slides.html
@@ -62,12 +62,12 @@ class: center, middle, title-slide
 **11/19 Lecture 12 (Today)**: 
   - Create a website using R Markdown and GitHub Pages (like [this](https://abigailhorn.github.io/PM566-final-project/)!)
   - Share interactive plots on the website
-  - Note: [Assignment due (hpc and sql)](/content/assignment/11-hw4.html)
+  - Note: [Assignment due (hpc and sql)](PM566/content/assignment/11-hw4.html)
 
 **11/26 Thanksgiving Holiday**
   
 **12/3 Lecture 13 Final Project Workshop**
-  - Note: [Assignment due (interactive viz I and II)](/content/assignment/13-hw5.html)
+  - Note: [Assignment due (interactive viz I and II)](PM566/content/assignment/13-hw5.html)
 
 ---
 
@@ -171,7 +171,7 @@ Along the way, we add &lt;span style="background-color: #B9BFFF"&gt;structure an
 
 YAML = &lt;s&gt;Yet Another Markup Language&lt;/s&gt; YAML Ain't Markup Language
 
-It is a *serialization language* used as a format for configuration files. *Serialization* is the process of converting an object into a format that can be transmitted or stored, by converting the object series of bits. This series of bits is then read later to reconstruct the object.
+It is a data-oriented *language structure* used as the input format for diverse software application. It is not a markup language (which includes indicators or "markup" which direct processing) but a *serialization* language. *Serialization* is the process of converting an object into a format that can be transmitted or stored, by converting the object series of bits. This series of bits is then read later to reconstruct the object.
 
 ---
 
@@ -244,7 +244,9 @@ You don't need to know much of HTML, CSS, or JavaScript to develop a website usi
 
 ## HTML basics
 
-HTML = Hyper Text Markup Language. It is the language behind most web pages you see.
+HTML = Hyper Text Markup Language. HTML is a standard markup language (not programming language) that provides the primary structure of most websites.
+
+HTML defines the basic structure of a web page. HTML work on the look of the website without the interactive effects and all. HTML pages are static which means the content cannot be changed.
 
 All elements in HTML are represented by tags. Most HTML tags appear in pairs, with an opening tag and a closing tag, and content is placed between the opening and closing tags, e.g., `&lt;span style="background-color: #B9BFFF"&gt;This is highlighted text&lt;/span&gt;` --&gt; &lt;span style="background-color: #B9BFFF"&gt;This is highlighted text&lt;/span&gt;.
 
@@ -278,7 +280,7 @@ Large image centered:
 ## CSS basics
 
 
-CSS = Cascading Stylesheets (CSS). It is a language is used to describe the look and formatting of documents written in HTML. it is responsible for the visual style of your site, responsible for components including:
+CSS = Cascading Stylesheets (CSS). It is a markup language is used to describe the look and formatting of documents written in HTML. it is responsible for the visual style of your site, responsible for components including:
 - color palettes,
 - images,
 - layouts/margins
@@ -301,9 +303,7 @@ There are 3 ways to define styles:
 
 ## JavaScript
 
-JavaScript is a programming language (unlike HTML and CSS, which do not contain any programming logic).
-
-It is typically used to manipulate elements on a web page. 
+JavaScript is an advanced programming language (unlike HTML and CSS, which do not contain any programming logic) that makes web pages more interactive and dynamic.	JavaScript simply adds dynamic content to websites to make them look good. JavaScript can be embedded inside HTML.	
 
 An effective way to learn it is through the JavaScript console in the Developer Tools of your web browser because you can interactively type code in the console and execute it, which feels similar to executing R code in the R console (e.g., in RStudio). You may open any web page in your web browser, then open the JavaScript console, and try the code below on any web page:
 
