--- a/website/content/assignment/13-hw5.html
+++ b/website/content/assignment/13-hw5.html
@@ -3,16 +3,19 @@ title: "Assignment 05 - Interactive Visualization I and II"
 output: tufte::tufte_html
 ---
 
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="due-date" class="section level2">
 <h2>Due Date</h2>
-<p>November 11, 2020 by midnight Pacific time.</p>
+<p>December 3, 2021 by midnight Pacific time.</p>
 </div>
 <div id="interactive-visualization-i-and-ii" class="section level2">
 <h2>Interactive Visualization I and II</h2>
 <ol style="list-style-type: decimal">
 <li><p>Using your midterm/final project data, create 3 different interactive visualizations using the tools learned in week 11 class/lab.</p></li>
-<li><p>Include the visualizations created in 1. on your github.io website.</p></li>
+<li><p>Include the visualizations created in (1) on your final project website hosted on <code>GitHub Pages</code>.</p></li>
+<li><p>Rename your final project website by modifying the relevant text in the <code>.yml</code> configuration file and the YAML header in the <code>index.Rmd</code> file. You may also modify the name of your GitHub repo so that the website url also provides a descriptive name.</p></li>
 </ol>
+<p><strong>Extra Credit</strong>: Create content across 2 pages on your website. You can use the example content from <a href="https://github.com/AbigailHorn/PM566-final-project">Lab 12</a> as an example.</p>
 </div>
