deploy: 36f9d9d83e1cc16e8b839242ae4c56269389795e

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -605,10 +605,10 @@ The learning objectives are to conduct data scraping and perform text mining.
       <h2><a href="/PM566/assignment/13-hw5/" >Assignment 05 - Interactive Visualization I and II</a></h2>
       <div class="article-style">
         
-           Due Date November 11, 2020 by midnight Pacific time.
+          Due Date December 3, 2021 by midnight Pacific time.
  Interactive Visualization I and II Using your midterm/final project data, create 3 different interactive visualizations using the tools learned in week 11 class/lab.
- Include the visualizations created in 1. on your github.io website.
-   
+ Include the visualizations created in (1) on your final project website hosted on GitHub Pages.
+ Rename your final project website by modifying the relevant text in the .yml configuration file and the YAML header in the index.
         
       </div>
     </div>
