update final project

--- a/website/content/assignment/14-final.html
+++ b/website/content/assignment/14-final.html
@@ -3,13 +3,14 @@ title: "Final Project"
 output: tufte::tufte_html
 ---
 
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="final-project" class="section level1">
 <h1>Final Project</h1>
 <ul>
-<li><p>Presentation (5 minutes): Wednesday November 18, 2020</p></li>
-<li><p>Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday November 25, 2020</p></li>
+<li><p>Presentation (5 minutes): Friday December 3, 2021</p></li>
+<li><p>Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Friday December 10, 2021</p></li>
 </ul>
 <p><strong>Learning Objective</strong>: To apply the skills learned in
 PM 566 by analyzing and interpreting a dataset of your choice.</p>
