--- a/assignment/14-final/index.html
+++ b/assignment/14-final/index.html
@@ -30,8 +30,8 @@
   
     
   
-  <meta name="description" content="Final Project  Presentation (5 minutes): Wednesday November 18, 2020
- Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday November 25, 2020
+  <meta name="description" content="Final Project  Presentation (5 minutes): Friday December 3, 2021
+ Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Friday December 10, 2021
   Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt.">
 
@@ -248,8 +248,8 @@ Narrative: Through this project you will launch a portfolio of data science proj
   <meta property="og:site_name" content="Introduction to Health Data Science - PM 566">
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/assignment/14-final/">
   <meta property="og:title" content="Final Project | Introduction to Health Data Science - PM 566">
-  <meta property="og:description" content="Final Project  Presentation (5 minutes): Wednesday November 18, 2020
- Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday November 25, 2020
+  <meta property="og:description" content="Final Project  Presentation (5 minutes): Friday December 3, 2021
+ Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Friday December 10, 2021
   Learning Objective: To apply the skills learned in PM 566 by analyzing and interpreting a dataset of your choice.
 Narrative: Through this project you will launch a portfolio of data science projects that will become seminal for your job hunt."><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
@@ -528,13 +528,14 @@ Narrative: Through this project you will launch a portfolio of data science proj
 
     <div class="article-style">
       
+<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="final-project" class="section level1">
 <h1>Final Project</h1>
 <ul>
-<li><p>Presentation (5 minutes): Wednesday November 18, 2020</p></li>
-<li><p>Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Wednesday November 25, 2020</p></li>
+<li><p>Presentation (5 minutes): Friday December 3, 2021</p></li>
+<li><p>Written report (single spaced, 6-8 pages where 3-4 pages are tables and figures): Friday December 10, 2021</p></li>
 </ul>
 <p><strong>Learning Objective</strong>: To apply the skills learned in
 PM 566 by analyzing and interpreting a dataset of your choice.</p>
