deploy: 55655dca13eb82ee0ed5e4027b0ae7e932020039

--- a/class/12-class/index.html
+++ b/class/12-class/index.html
@@ -31,6 +31,7 @@
     
   
   <meta name="description" content="  Lab Exercise Lab is on a website at this link
+Test
  Slides link
  ">
 
@@ -248,6 +249,7 @@
   <meta property="og:url" content="https://uscbiostats.github.io/PM566/class/12-class/">
   <meta property="og:title" content="Interactive visualization and effective data communication II | Introduction to Health Data Science - PM 566">
   <meta property="og:description" content="  Lab Exercise Lab is on a website at this link
+Test
  Slides link
  "><meta property="og:image" content="https://uscbiostats.github.io/PM566/img/social-image.png">
   <meta property="twitter:image" content="https://uscbiostats.github.io/PM566/img/social-image.png"><meta property="og:locale" content="en-us">
@@ -579,6 +581,7 @@
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
 <p>Lab is on a website at <a href="https://abigailhorn.github.io/PM566-final-project/12-lab.html">this link</a></p>
+<p>Test</p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
