--- a/assignment/05-lab/index.html
+++ b/assignment/05-lab/index.html
@@ -766,7 +766,7 @@ stations &lt;- stations[n == 1,][, n := NULL]</code></pre>
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2021)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -776,11 +776,11 @@ stations &lt;- stations[n == 1,][, n := NULL]</code></pre>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    George Vega Yon, Kim Siegmund, Abigail Horn</a>
+                    Kim Siegmund</a>
             </p>
             <p>
-                <a href="mailto:vegayon@usc.edu"><i class="fas fa-envelope"></i>
-                    vegayon@usc.edu</a>
+                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
+                    kims@usc.edu</a>
             </p>
         </div>
 
