--- a/class/07-class/index.html
+++ b/class/07-class/index.html
@@ -622,7 +622,7 @@ that will be featured in the class.</p>
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2021)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -632,11 +632,11 @@ that will be featured in the class.</p>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    George Vega Yon, Kim Siegmund, Abigail Horn</a>
+                    Kim Siegmund</a>
             </p>
             <p>
-                <a href="mailto:vegayon@usc.edu"><i class="fas fa-envelope"></i>
-                    vegayon@usc.edu</a>
+                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
+                    kims@usc.edu</a>
             </p>
         </div>
 
