--- a/index.html
+++ b/index.html
@@ -614,9 +614,9 @@
         <h3>Instructor</h3>
 
         <ul class="icon-list">
-            <li><i class="fas fa-user"></i> <a> George Vega Yon, Kim Siegmund, Abigail Horn</a></li>
-            <li><i class="fas fa-university"></i> Hastings Auditorium (HSC)</li>
-            <li><i class="fas fa-envelope"></i> <a href="mailto:vegayon@usc.edu"> vegayon@usc.edu</a></li>
+            <li><i class="fas fa-user"></i> <a> Kim Siegmund</a></li>
+            <li><i class="fas fa-university"></i> Soto Street Building (SSB)</li>
+            <li><i class="fas fa-envelope"></i> <a href="mailto:kims@usc.edu"> kims@usc.edu</a></li>
         </ul>
     </div>
 
@@ -737,7 +737,7 @@
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2021)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -747,11 +747,11 @@
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    George Vega Yon, Kim Siegmund, Abigail Horn</a>
+                    Kim Siegmund</a>
             </p>
             <p>
-                <a href="mailto:vegayon@usc.edu"><i class="fas fa-envelope"></i>
-                    vegayon@usc.edu</a>
+                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
+                    kims@usc.edu</a>
             </p>
         </div>
 
