--- a/reading/05-reading/index.html
+++ b/reading/05-reading/index.html
@@ -665,7 +665,7 @@ jupyter <a href="https://jupyter.org/install">here</a>.</p></li>
     <div class="row course-info">
         <div class="col-md-7">
             <p>
-                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2021)</strong><br>
+                <strong>PM566: Introduction to Health Data Science - PM 566 (Fall 2022)</strong><br>
             </p>
             <p>
                 <a href="https://www.usc.edu/" target="_blank" rel="noopener">University of Southern California</a>
@@ -675,11 +675,11 @@ jupyter <a href="https://jupyter.org/install">here</a>.</p></li>
             </p>
             <p>
                 <a><i class="fas fa-user"></i>
-                    George Vega Yon, Kim Siegmund, Abigail Horn</a>
+                    Kim Siegmund</a>
             </p>
             <p>
-                <a href="mailto:vegayon@usc.edu"><i class="fas fa-envelope"></i>
-                    vegayon@usc.edu</a>
+                <a href="mailto:kims@usc.edu"><i class="fas fa-envelope"></i>
+                    kims@usc.edu</a>
             </p>
         </div>
 
