--- a/slides/01-welcome/slides.html
+++ b/slides/01-welcome/slides.html
@@ -3,15 +3,19 @@
   <head>
     <title>Welcome!</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.10/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.14/header-attrs.js"></script>
     <link rel="stylesheet" href="theme.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, title-slide
 
+.title[
 # Welcome!
+]
+.subtitle[
 ## PM 566: Introduction to Health Data Science
+]
 
 ---
 
@@ -23,11 +27,10 @@ class: center, middle, title-slide
 ## [1] "theme.css"
 ```
 
-# Instructors
+# Instructor
 
-- George Gerald Vega Yon
 - Kim Siegmund
-- Abigail Horn
+
 
 
 ---
@@ -222,6 +225,19 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
