update dates on assignments hw,midterm,final.Rmds

--- a/website/content/assignment/13-hw5.html
+++ b/website/content/assignment/13-hw5.html
@@ -1,14 +1,14 @@
 ---
 title: "Assignment 05 - Interactive Visualization I and II"
 output: tufte::tufte_html
+date: 2022-11-16
 ---
 
-<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="due-date" class="section level2">
 <h2>Due Date</h2>
-<p>December 3, 2021 by midnight Pacific time.</p>
+<p>This assignment is due by midnight Pacific time, December 2nd, 2022</p>
 </div>
 <div id="interactive-visualization-i-and-ii" class="section level2">
 <h2>Interactive Visualization I and II</h2>
