--- a/website/content/assignment/05-hw2.html
+++ b/website/content/assignment/05-hw2.html
@@ -2,15 +2,14 @@
 title: "Assignment 02 - Data Viz and Wrangling"
 output: tufte::tufte_html
 link-citations: yes
-date: 2021-09-10
+date: 2022-09-14
 ---
 
-<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="due-date" class="section level2">
 <h2>Due Date</h2>
-<p>October 8, 2021 by midnight Pacific time.</p>
+<p>This assignment is due by midnight Pacific time, October 7th, 2022</p>
 <p>For this assignment, we will be analyzing data from USC’s Children’s Health Study.
 The learning objectives are to conduct data wrangling and visualize the data with key questions in mind.</p>
 </div>
