--- a/website/content/assignment/09-hw3.html
+++ b/website/content/assignment/09-hw3.html
@@ -2,15 +2,14 @@
 title: "Assignment 03 - Web Scraping and Text Mining"
 output: tufte::tufte_html
 link-citations: yes
-date: 2021-09-10
+date: 2022-10-05
 ---
 
-<script src="/PM566/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <div id="due-date" class="section level2">
 <h2>Due Date</h2>
-<p>November 5, 2021 by midnight Pacific time.</p>
+<p>This assignment is due by midnight Pacific time, November 2, 2022</p>
 <p>The learning objectives are to conduct data scraping and perform text mining.</p>
 </div>
 <div id="apis" class="section level2">
