deploy: c688e3aaa763cc4b36589ed5823a5d8637d344dd

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -693,7 +693,7 @@
 
 </table>
 </p>
-<p>As the weeks go by, consult the <a href="/schedule/">Schedule Page</a> for more information on weekly topics, problem sets, readings, and other materials. The schedule is likely to change as we go. Links to readings, assignments, and other materials from class will be posted on that page.</p>
+<p>As the weeks go by, consult the <a href="/PM566/schedule/">Schedule Page</a> for more information on weekly topics, problem sets, readings, and other materials. The schedule is likely to change as we go. Links to readings, assignments, and other materials from class will be posted on that page.</p>
 </div>
 <div id="statement-for-students-with-disabilities" class="section level2">
 <h2>Statement for students with disabilities</h2>
