--- a/website/content/assignment/01-lab.html
+++ b/website/content/assignment/01-lab.html
@@ -1,4 +1,9 @@
-<script src="01-lab_files/header-attrs-2.10/header-attrs.js"></script>
+---
+title: "Lab 01 - Hello R!"
+output: tufte::tufte_html
+link-citations: yes
+---
+
 
 
 <div id="learning-goals" class="section level1">
@@ -27,7 +32,7 @@
 <h1>Getting started</h1>
 <div id="download-project" class="section level2">
 <h2>1. Download project</h2>
-<p>Go the the the lab page for this week on the <a href="https://elastic-khorana-70231e.netlify.app/">website</a>. You should see a “download” button under the “Lab Exercise” section. Click it to download the material.</p>
+<p>Go the the the lab page for this week on the <a href="/PM566/class/01-class/">website</a>. You should see a “download” button under the “Lab Exercise” section. Click it to download the material.</p>
 </div>
 <div id="download-r" class="section level2">
 <h2>2 Download R</h2>
@@ -40,20 +45,20 @@
 <p>If you have R installed run the following code</p>
 <pre class="r"><code>R.version</code></pre>
 <pre><code>##                _                           
-## platform       x86_64-pc-linux-gnu         
+## platform       x86_64-apple-darwin17.0     
 ## arch           x86_64                      
-## os             linux-gnu                   
-## system         x86_64, linux-gnu           
+## os             darwin17.0                  
+## system         x86_64, darwin17.0          
 ## status                                     
 ## major          4                           
-## minor          1.0                         
-## year           2021                        
-## month          05                          
-## day            18                          
-## svn rev        80317                       
+## minor          2.0                         
+## year           2022                        
+## month          04                          
+## day            22                          
+## svn rev        82229                       
 ## language       R                           
-## version.string R version 4.1.0 (2021-05-18)
-## nickname       Camp Pontanezen</code></pre>
+## version.string R version 4.2.0 (2022-04-22)
+## nickname       Vigorous Calisthenics</code></pre>
 <p>This should tell you what version of R you are currently using. If your R version is lower then 3.6.0 I would strongly recommend updating. In general it is a good idea to update your R version, unless you have a project right now that depend on a specific version of R.</p>
 </div>
 </div>
@@ -143,7 +148,7 @@ library(datasauRus)</code></pre>
 <p>Next, we need to visualize these data. We will use the <code>ggplot</code> function for this. Its first argument is the data you’re visualizing. Next we define the <code>aes</code>thetic mappings. In other words, the columns of the data that get mapped to certain aesthetic features of the plot, e.g. the <code>x</code> axis will represent the variable called <code>x</code> and the <code>y</code> axis will represent the variable called <code>y</code>. Then, we add another layer to this plot where we define which <code>geom</code>etric shapes we want to use to represent each observation in the data. In this case we want these to be points,m hence <code>geom_point</code>.</p>
 <pre class="r"><code>ggplot(data = dino_data, mapping = aes(x = x, y = y)) +
   geom_point()</code></pre>
-<p><img src="01-lab_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
+<p><img src="/PM566/assignment/01-lab_files/figure-html/unnamed-chunk-6-1.png" width="672" /></p>
 <p>If this seems like a lot, it is. And you will learn about the philosophy of building data visualizations in layer in detail in the upcoming class. For now, follow along with the code that is provided.</p>
 <p>For the second part of this exercises, we need to calculate a summary statistic: the correlation coefficient. Correlation coefficient, often referred to as <span class="math inline">\(r\)</span> in statistics, measures the linear association between two variables. You will see that some of the pairs of variables we plot do not have a linear relationship between them. This is exactly why we want to visualize first: visualize to assess the form of the relationship, and calculate <span class="math inline">\(r\)</span> only if relevant. In this case, calculating a correlation coefficient really doesn’t make sense since the relationship between <code>x</code> and <code>y</code> is definitely not linear – it’s dinosaurial!</p>
 <p>But, for illustrative purposes, let’s calculate correlation coefficient between <code>x</code> and <code>y</code>.</p>
