--- a/assignment/01-lab/index.html
+++ b/assignment/01-lab/index.html
@@ -597,7 +597,7 @@
 <div id="hello-rstudio" class="section level1">
 <h1>Hello RStudio!</h1>
 <p>RStudio is comprised of four panes.</p>
-<p><img src="/assignment-img/rstudio-anatomy.png" /></p>
+<p><img src="../../static/assignment-img/rstudio-anatomy.png" /></p>
 <ul>
 <li><p>On the bottom left is the Console, this is where you can write code that will be evaluated. Try typing <code>2 + 2</code> here and hit enter, what do you get?</p></li>
 <li><p>On the bottom right is the Files pane, as well as other panes that will come handy as we start our analysis.</p></li>
@@ -697,7 +697,7 @@ library(datasauRus)</code></pre>
 <p>Click on the gear icon in on top of the R Markdown document, and select “Output Options…” in the dropdown menu. In the pop up dialogue box go to the Figures tab and change the height and width of the figures, and hit OK when done. Then, knit your document and see how you like the new sizes. Change and knit again and again until you’re happy with the figure sizes. Note that these values get saved in the YAML.</p>
 <p><img src="/assignment-img/fig-resize-local.png" /></p>
 <p>You can also use different figure sizes for different figures. To do so click on the gear icon within the chunk where you want to make a change. Changing the figure sizes added new options to these chunks: <code>fig.width</code> and <code>fig.height</code>. You can change them by defining different values directly in your R Markdown document as well.</p>
-<p><img src="/assignment-img/theme-highlight.png" /></p>
+<p><img src="../../static/assignment-img/theme-highlight.png" /></p>
 <ul>
 <li><strong>Change the look of your report:</strong></li>
 </ul>
