move 01-lab.Rmd to static/labs and update 01-class.Rmd to find it there

--- a/website/content/assignment/01-lab.html
+++ b/website/content/assignment/01-lab.html
@@ -80,6 +80,7 @@ link-citations: yes
 <h1>Hello RStudio!</h1>
 <p>RStudio is comprised of four panes.</p>
 <p><img src="../../static/assignment-img/rstudio-anatomy.png" /></p>
+<p><img src="../../static/assignment-img/rstudio-anatomy.png" width="500" /></p>
 <ul>
 <li><p>On the bottom left is the Console, this is where you can write code that will be evaluated. Try typing <code>2 + 2</code> here and hit enter, what do you get?</p></li>
 <li><p>On the bottom right is the Files pane, as well as other panes that will come handy as we start our analysis.</p></li>
