--- a/class/01-class/index.html
+++ b/class/01-class/index.html
@@ -580,8 +580,8 @@ Download
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p><a href="/PM566/assignment/01-lab">link</a></p>
-<p><a href="/PM566/assignment/pm566-01-lab.zip">Download</a></p>
+<p><a href="/PM566/labs/lab-01/01-lab.html">link</a></p>
+<p><a href="/PM566/labs/lab-01/pm566-01-lab.zip">Download</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
