--- a/class/01-class/index.html
+++ b/class/01-class/index.html
@@ -581,7 +581,7 @@ Download
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
 <p><a href="/PM566/labs/lab-01/01-lab.html">link</a></p>
-<p><a href="/PM566/assignment/pm566-01-lab.zip">Download</a></p>
+<p><a href="https://github.com/USCbiostats/PM566/blob/master/website/static/labs/lab-01/pm566-01-lab.zip">Download</a></p>
 </div>
 <div id="slides" class="section level2">
 <h2>Slides</h2>
