update links on final slide of week1

--- a/website/static/slides/01-welcome/slides.html
+++ b/website/static/slides/01-welcome/slides.html
@@ -161,7 +161,7 @@ Over 16,000 packages added to CRAN
 
 # Break time
 
-We will be back for labs at 2:30
+Following break we will run lab 01
 
 ---
 
@@ -171,11 +171,11 @@ The lab exercises can be found at:
 
 Website -&gt; Schedule -&gt; <svg aria-hidden="true" role="img" viewBox="0 0 640 512" style="height:1em;width:1.25em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:currentColor;overflow:visible;position:relative;"><path d="M208 352c-2.39 0-4.78.35-7.06 1.09C187.98 357.3 174.35 360 160 360c-14.35 0-27.98-2.7-40.95-6.91-2.28-.74-4.66-1.09-7.05-1.09C49.94 352-.33 402.48 0 464.62.14 490.88 21.73 512 48 512h224c26.27 0 47.86-21.12 48-47.38.33-62.14-49.94-112.62-112-112.62zm-48-32c53.02 0 96-42.98 96-96s-42.98-96-96-96-96 42.98-96 96 42.98 96 96 96zM592 0H208c-26.47 0-48 22.25-48 49.59V96c23.42 0 45.1 6.78 64 17.8V64h352v288h-64v-64H384v64h-76.24c19.1 16.69 33.12 38.73 39.69 64H592c26.47 0 48-22.25 48-49.59V49.59C640 22.25 618.47 0 592 0z"/></svg> -&gt; Lab Exercise
 
-https://USCbiostats.github.io/PM566/assignment/01-lab/
+https://uscbiostats.github.io/PM566/labs/lab-01/01-lab.html
 
 Related Github Issue
 
-https://github.com/USCbiostats/PM566/issues/38
+https://github.com/USCbiostats/PM566/issues/54
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
