deploy: 8f02462bcccf4889e30b0bd5c836766f8bfeb811

--- a/reading/02-reading/index.html
+++ b/reading/02-reading/index.html
@@ -542,7 +542,7 @@ and Github
 <a href="https://bookdown.org/rdpeng/RProgDA/version-control-and-github.html">(link)</a></p></li>
 </ul>
 <p>You are also expected to have git installed in your system and having a
-GitHub account. For this see
+GitHub account. For this see <a href="https://git-scm.com/downloads">here</a>,
 <a href="https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration">here</a>
 and <a href="http://github.com/">here</a>.</p>
 </div>
