deploy: 8c01db6521e4a5ed49578b9d626544867e8b65bd

--- a/class/12-class/index.html
+++ b/class/12-class/index.html
@@ -580,7 +580,7 @@ Test
 
 <div id="lab-exercise" class="section level2">
 <h2>Lab Exercise</h2>
-<p>Lab is on a website at <a href="https://abigailhorn.github.io/PM566-final-project/12-lab.html">this link</a></p>
+<p>Lab is on a website at <a href="https://ksiegmund.github.io/PM566-lab12-example/12-lab.html">this link</a></p>
 <p>Test</p>
 </div>
 <div id="slides" class="section level2">
